# midrc_dictionary

./: .gitignore  .secrets.baseline  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: dictionary_push.yaml
gdcdictionary/clinical/: case_template.json  condition_template.json  medication_template.json  observation_template.json  procedure_template.json
gdcdictionary/imaging/: cr_instance_template.json  cr_series_template.json  ct_scan_template.json  ct_series_template.json  dx_instance_template.json  dx_series_template.json  imaging_study_template.json  mr_exam_template.json  mr_instance_template.json  mr_series_template.json  radiography_exam_template.json  segmentation_file_template.json
gdcdictionary/schemas/: _definitions.yaml  _terms.yaml  annotation.yaml  annotation_file.yaml  annotation_instance.yaml  annotation_series.yaml  case.yaml  case_annotation.yaml  case_annotation_file.yaml  chest_radiograph.yaml  computed_tomography_file.yaml  condition.yaml  core_metadata_collection.yaml  cr_image.yaml  cr_instance.yaml  cr_series.yaml  cr_series_file.yaml  ct_image.yaml  ct_instance.yaml  ct_scan.yaml  ct_series.yaml  ct_series_file.yaml  ct_slice.yaml  dataset.yaml  derived_image.yaml  dicom_annotation_file.yaml  dicom_annotation_instance.yaml  dicom_annotation_series.yaml  dr_series_file.yaml  dx_image.yaml  dx_instance.yaml  dx_series.yaml  dx_series_file.yaml  imaging_exam.yaml  imaging_file.yaml  imaging_report.yaml  imaging_series.yaml  imaging_study.yaml  imaging_study_annotation.yaml  imaging_study_annotation_file.yaml  (+37 more)
(+53 files in other folders)
